test/expected/explain_rrrr.out
explain int&& &&r
              ^
15: error: rvalue reference is not supported in C
